--- a/code.html
+++ b/code.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en" class="h-100">
-
+    
+<!--=== Head Section ===-->
 <head>
-    <title>App Name: A Coding Project by Shawn Smith</title>
+    <title>Fizz Buzz: A Coding Project by Shawn Smith</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -20,18 +21,19 @@
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
     <!--Favicon-->
-    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="./img/Fizz Buzz favicon.ico">
 
    </style>
 </head>
 
+<!--=== Body Section ===-->
 <body class="d-flex flex-column h-100">
 
 <!--=== Nav Section ===-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
         
-        <a class="navbar-brand" href="#"><img src="img/Shawn Smith (opaque).svg" class="d-inline-block align-text-top" alt="Shawn Smith's Logo" width="30" height="24"> APP NAME</a>
+        <a class="navbar-brand" href="#"><img src="img/Fizz Buzz Logo.png" class="d-inline-block align-text-top" alt="Shawn Smith's Logo" width="30" height="24"> Fizz Buzz</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +67,7 @@
 <!--=== Main Section ===-->
 <main class="flex-shrink-0">
     <div class="container py-5 px-5 mt-5">
-        <h2 class="border-1 border-bottom border-dark">The Code for APP NAME</h2>
+        <h2 class="border-1 border-bottom border-dark">The Code for Fizz Buzz</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2">
             <div class="col-lg-8">
                 <pre class="line-numbers"><code class="language-javascript">
@@ -99,7 +101,7 @@
 
             <!--Logo-->
             <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
-                <img src="./img/Shawn Smith (opaque).svg" alt="Shawn Smith Logo" height="24">
+                <img src="./img/Fizz Buzz Logo.png" alt="Shawn Smith Logo" height="24">
             </div>
 
             <!--Social Icons-->
@@ -116,12 +118,12 @@
     </div>
 </footer>
 
-<!--=== Bootstrap JS ===-->
+<!--=== Bootstrap JS Section ===-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
 </script>
 
-<!--=== JavaScript Scripts ===-->
+<!--=== JavaScript Scripts Section ===-->
 <script src="./js/site.js"></script>
 <script src="./js/prism.js"></script>
     <script>
