--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en" class="h-100">
 
+<!--=== Head Section ===-->
 <head>
-    <title>App Name: A Coding Project by Shawn Smith</title>
+    <title>Fizz Buzz: A Coding Project by Shawn Smith</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -20,18 +21,19 @@
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
     <!--Favicon-->
-    <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="./img/Fizz Buzz favicon.ico">
 
    </style>
 </head>
 
+<!--=== Body Section ===-->
 <body class="d-flex flex-column h-100">
 
 <!--=== Nav Section ===-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
         
-        <a class="navbar-brand" href="#"><img src="img/Shawn Smith (opaque).svg" class="d-inline-block align-text-top" alt="Shawn Smith's Logo" width="30" height="24"> APP NAME</a>
+        <a class="navbar-brand" href="#"><img src="img/Fizz Buzz Logo.png" class="d-inline-block align-text-top" alt="Shawn Smith's Logo" width="30" height="24"> Fizz Buzz</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,9 +71,13 @@
             <!--Main Content-->
            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold 1h-1 mb-3">APP NAME: A Coding Project</h1>
-                    <h4 class="lead">Live Life one loop at a time. A Javascript coding exercise using loops. Write a program that displays the numbers from 0 to 100. Display the even numbers in <strong>BOLD.</strong>
+
+                    <!--Project Introduction-->
+                    <h1 class="display-5 fw-bold 1h-1 mb-3">Fizz Buzz: A Coding Project</h1>
+                    <h4 class="lead">When it counts you Fizz Buzz. A Javascript coding exercise using loops. Write a program that prints the numbers from 1 to 100 and for multiples of "3" display <strong>"Fizz"</strong> instead of the number for the mutliples of "5" display <strong>"Buzz"</strong>. If a multiple of both display <strong>"FizzBuzz"</strong>.
                     </h4>
+
+                    <!--Tchnologies Used in project-->
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Css and Bootstrap Layout</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
@@ -102,7 +108,7 @@
 
                 <!--Logo Content-->
                 <div class="col">
-                    <img src="./img/Shawn Smith (opaque).svg" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
+                    <img src="./img/Fizz Buzz Logo.png" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
                 </div>
            </div>
            
@@ -122,7 +128,7 @@
 
                 <!--Logo-->
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
-                    <img src="./img/Shawn Smith (opaque).svg" alt="Shawn Smith Logo" height="24">
+                    <img src="./img/Fizz Buzz Logo.png" alt="Shawn Smith Logo" height="24">
                 </div>
 
                 <!--Social Icons-->
@@ -139,12 +145,12 @@
         </div>
     </footer>
 
-    <!--=== Bootstrap JS ===-->
+    <!--=== Bootstrap JS Section ===-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
 
-    <!--=== Javascript Scripts ===-->
+    <!--=== Javascript Scripts Section ===-->
     <script src="./js/site.js"></script>
     <script src="./js/prism.js"></script>
     <script>
